Started to add the timeclock

--- a/templates/tabs/stempeluhr.html
+++ b/templates/tabs/stempeluhr.html
@@ -1,1 +1,43 @@
-Hier kommt die Stempeluhr
+<style>
+    #timeclock_buttons {
+        display: grid;
+        grid-template-columns: 50% 50%
+    }
+
+    #timeclock_info_text {
+        font-size: 40px;
+    }
+
+    .timeclock_button {
+        width: 200px;
+        height: 150px;
+        font-size: 35px;
+        border-radius: 20px;
+    }
+
+    .timeclock_button:disabled {
+        background-color: dimgrey;
+        color: linen;
+        opacity: .9;
+        cursor: default;
+    }
+</style>
+<div id="timeclock">
+    <div id="timeclock_info_text">
+        <center>
+            Derzeit keine Schicht offen
+        </center>
+    </div>
+    <div id="timeclock_buttons">
+        <div id="timeclock_start">
+            <center>
+                <button class="timeclock_button" type="button">Schicht start</button>
+            </center>
+        </div>
+        <div id="timeclock_end">
+            <center>
+                <button class="timeclock_button" type="button" disabled>Schicht ende</button>
+            </center>
+        </div>
+    </div>
+</div>
