Stempleuhr weiter implementiert, fehler beim Aufruf der setup Funktion gefunden, distinkter name muss verwendet werden.

--- a/templates/overview.html
+++ b/templates/overview.html
@@ -149,7 +149,7 @@
         <div id="Daten" class="tabcontent" content="/tabs/daten.html"> </div>
         <div id="Einstellungen" class="tabcontent" content="/tabs/einstellungen.html"> </div>
     </div>
-    <script>
+    <script defer>
         function reattach_script(script_node) {
             let new_script_node = document.createElement("script");
             new_script_node.innerHTML = script_node.innerHTML;
