--- a/templates/tabs/arbeitsplanung.html
+++ b/templates/tabs/arbeitsplanung.html
@@ -19,12 +19,21 @@
         display: none;
         width: 30vw;
         margin-left: 10px;
+        padding: 5px;
+        background-color: rgb(225, 225, 225);
+        border-radius: 10px;
     }
 
     .close_x {
+        color: white;
         float: right;
         font-size: 30px;
         cursor: pointer;
+        width: 30px;
+        padding-left: 10px;
+        height: 40px;
+        border-radius: 5px;
+        background-color: black;
     }
 </style>
 <div id="main_time_view">
